# Patent_Wizard

./: .gitignore  pyproject.toml
backend/: pyproject.toml
backend/app/: chunking.py  download.py  embed.py  extract.py  main.py  temp_main.py  validation.py
