[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "CJ Vines",email = "cjvines56@tamu.edu"},
    {name = "Christian Casteel",email = "christiancasteel@tamu.edu"},
    {name = "Kosi Ezewudo",email = "exewudokositoni@tamu.edu"}
    ]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn[standard] (>=0.36.0,<0.37.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "jsonstreams (>=0.6.0,<0.7.0)",
    "ijson (>=3.4.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "colbert-ai @ git+https://github.com/stanford-futuredata/ColBERT.git"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.13.1,<0.14.0)"
]
