[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "CJ Vines",email = "cjvines56@tamu.edu"},
    {name = "Christian Casteel",email = "christiancasteel@tamu.edu"},
    {name = "Kosi Ezewudo",email = "exewudokositoni@tamu.edu}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn[standard] (>=0.36.0,<0.37.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.13.1,<0.14.0)"
]
